--- a/SQLManager/SQLManager/App.config
+++ b/SQLManager/SQLManager/App.config
@@ -3,4 +3,11 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <appSettings>
+      <add key="ServerName" value="localhost" />
+      <add key="Database" value="SOF105" />
+      <add key="IntegratedSecurity" value="SSPI" />
+      <add key="Username" value="" />
+      <add key="Password" value="" />
+    </appSettings>
 </configuration>
