SQLQuery Builder Page. Images and Background + Shortcut F5

--- a/SQLManager/SQLManager/App.config
+++ b/SQLManager/SQLManager/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
     <appSettings>
-      <add key="ServerName" value="localhost" />
+      <add key="ServerName" value="localhost\SQLEXPRESS" />
       <add key="Database" value="SOF105" />
       <add key="IntegratedSecurity" value="SSPI" />
       <add key="Username" value="" />
