--- a/SQLManager/SQLManager/App.config
+++ b/SQLManager/SQLManager/App.config
@@ -4,8 +4,8 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
     <appSettings>
-      <add key="ServerName" value="localhost\SQLEXPRESS" />
-      <add key="Database" value="SOF105" />
+      <add key="ServerName" value=" " />
+      <add key="Database" value=" " />
       <add key="IntegratedSecurity" value="SSPI" />
       <add key="Username" value="" />
       <add key="Password" value="" />
